# chat

./: README.md  bundle.js  bundle.js.map  index.html
server/: .gitignore  Cargo.toml
server/src/: data.rs  feature.rs  lib.rs  main.rs  model.rs  prelude.rs  server.rs  util.rs
server/src/data/: db.rs  repository.rs
server/src/data/db/: dev_flex_chat_database.rs  entity.rs  toml_loader.rs  user_data_source.rs  user_data_source_impl.rs  util.rs
server/src/data/db/entity/: dev_flex_chat_entity.rs
server/src/data/repository/: dev_flex_chat_repository.rs  user_repository.rs
server/src/feature/: dev_flex_chat.rs  migration.rs  user.rs
server/src/model/: hello_model.rs  juniper_object.rs  version.rs
webapp/: package-lock.json  package.json  tsconfig.json  webpack.config.js
webapp/src/: App.tsx  app.css  app.tsx  env.d.ts  index.html  index.tsx
webapp/src/data/api/: chat-data-source-impl.ts  chat-data-source.ts
webapp/src/data/repository/: chat-repository.ts
webapp/src/feature/: browse-channels.tsx
webapp/src/model/: chat-models.ts
