[package]
name = "chat"
version = "0.3.0"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2018"
description = "Chat server"
documentation = "https://github.com/sukawasatoru/chat"
homepage = "https://github.com/sukawasatoru/chat"
repository = "https://github.com/sukawasatoru/chat.git"

[dependencies]
dotenv = "=0.15.0"
env_logger = "=0.7.1"
failure = "=0.1.7"

# v0.1.x for juniper v0.14.x
futures = "=0.1.29"

# v0.12.x for juniper v0.14.x
hyper = "=0.12.35"
juniper = "=0.14.2"
juniper_hyper = "=0.5.2"
log = "=0.4.8"

# v0.9.x for juniper v0.14.x
reqwest = "=0.10.4"
serde = "=1.0.104"
serde_derive = "=1.0.104"
serde_json = "=1.0.48"
structopt = "=0.3.12"
toml = "=0.5.6"

[dependencies.chrono]
version = "=0.4.11"
features = ["serde"]

[dependencies.url]
version = "=2.1.1"
features = ["serde"]

[dependencies.uuid]
version = "=0.8.1"
features = ["serde", "v4"]
